# BabelDOC-WebUI

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_ui.py
ui/: __init__.py  app.py
ui/components/: __init__.py  settings.py
